@@ -13,26 +13,17 @@ public class MobileSort {
         mobile.add(new Mobile("BlackBerry", "Bold 9000"));
         System.out.println(mobile);
 
-       Set<String> producers = mobile.stream()
-                .map(Mobile::producer)
-                .collect(Collectors.toSet());
-        System.out.println(producers);
-
-        Set<String> newProducers=Set.of("Apple","Samsung","Xiaomi"); // ты этот список никак не используешь в своем коде
+        Set<String> newProducers = Set.of("Apple", "Samsung", "Xiaomi");
 
        /* stream() каждый раз проходит по всей коллекции, как цикл. Когда ты дважды делаешь стрим, ты дважды проходишь по коллекции, 
        а все операции можно сделать за 1 раз
-       
-       Пример:
-       List<String> filteredProducers = mobile.stream()
-                .map(Mobile::producer)
-                .filter(producer -> newProducers.contains(producer))
-                .collect(Collectors.toList());
+
        */
-       List<String> anyProd= producers.stream()
-               .filter("Apple"::equals)
-               .toList();
-        System.out.println(anyProd);
+        List<String> filteredProducers = mobile.stream()
+                .map(Mobile::producer)
+                .filter(newProducers::contains)
+                .collect(Collectors.toList());
+        System.out.println(filteredProducers);
 
     }
 }
